--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,6 @@
     </div>
 
     <script>
-        // JavaScript代码将在这里
         const chatbox = document.getElementById('chatbox');
         const userInput = document.getElementById('userInput');
 
@@ -91,7 +90,6 @@
                 displayMessage(userText, 'user-message');
                 userInput.value = '';
                 
-                // 调用后端API
                 try {
                     const response = await fetch('/api/chat', {
                         method: 'POST',
@@ -101,6 +99,7 @@
                         body: JSON.stringify({ text: userText })
                     });
                     const data = await response.json();
+                    console.log('API response:', data);
                     displayMessage(data.reply, 'bot-message');
                 } catch (error) {
                     console.error('Error:', error);
